crates/plotnik-lib/tests/03-analyze/direct_recursion/no_input_sibling_string_branch.txt
A = [(A) 'escape']
------------------ DIAGNOSTICS -------------------
error: infinite recursion: cycle consumes no input
 --> query.ptk:1:7
  |
1 | A = [(A) 'escape']
  |       ^
  |       |
  |       references itself
  |
help: recursive references must consume input before recursing
-------------------- SYMBOLS ---------------------
A
  A (cycle)
